# homebrew-macos-wp

./: Cargo.toml  README.md  UNLICENSE
.github/workflows/: release.yml
Formula/: macos-wp.rb
src/: cg.rs  main.rs
